--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="container" class="container">
-      <h1>Pressione para ligar o led</h1>
+      <h1>Clique para ligar o led</h1>
       <label class="switch">
         <input type="checkbox" />
         <span class="slider"></span>
